--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.0.24",
+    "primeicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
