--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "framer-motion": "^11.0.24",
     "primeicons": "^7.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
