--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -3,7 +3,7 @@
 		"id": 1,
 		"title": "Dancers4Life Club",
 		"description": "Discover a World of Dance",
-		"img": "../../assets/dancers.png",
+		"img": "/src/assets/dancers.png",
 		"stack": "ReactJs + TailwindCSS + Stripe"
 
 	},
@@ -11,35 +11,35 @@
 		"id": 2,
 		"title": "Taskify",
 		"description": "Efficient Task Management App [In progress]",
-		"img": "../../assets/taskify.png",
+		"img": "/src/assets/taskify.png",
 		"stack": "ReactJs + TailwindCSS + Django"
 	},
 	{
 		"id": 3,
 		"title": "VtuHub",
 		"description": "A VTU platform",
-		"img": "../../assets/vtuhub.png",
+		"img": "/src/assets/vtuhub.png",
 		"stack": "HTML + TailwindCSS + JavaScript + Django + PayStack"
 	},
 	{
 		"id": 4,
 		"title": "Winsmart",
 		"description": "Deriv Seminar Registration Platform",
-		"img": "../../assets/winsmart.png",
+		"img": "/src/assets/winsmart.png",
 		"stack": "ReactJs + TailwindCSS + Django"
 	},
 	{
 		"id": 5,
 		"title": "FoodHub",
 		"description": "Restaurant Page [Test]",
-		"img": "../../assets/foodhub.png",
+		"img": "/src/assets/foodhub.png",
 		"stack": "HTML + CSS + JavaScript"
 	},
 	{
 		"id": 6,
 		"title": "EdAI",
 		"description": "AI-Powered E-Learning Platform [Pending]",
-		"img": "../../assets/edai.png",
+		"img": "/src/assets/edai.png",
 		"stack": "HTML + CSS + JavaScript"
 	}
 
