--- a/vercel.json
+++ b/vercel.json
@@ -6,13 +6,21 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/assets/(.*)",
-      "headers": {
-        "Cache-Control": "public, max-age=31536000"
-      },
-      "dest": "/assets/$1"
+      "source": "/assets/(.*)",
+      "destination": "/src/assets/$1"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000"
+        }
+      ]
     }
   ],
   "cleanUrls": true,
