--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -12,7 +12,7 @@
 		"id": 2,
 		"title": "Taskify",
 		"description": "Efficient Task Management App [In progress]",
-		"img": "./src/assets/taskify.png",
+		"img": "/assets/taskify.png",
 		"stack": "ReactJs + TailwindCSS + Django",
 		"link": "https://taskify-fr.vercel.app"
 	},
@@ -20,7 +20,7 @@
 		"id": 3,
 		"title": "VtuHub",
 		"description": "A VTU platform",
-		"img": "./src/assets/vtuhub.png",
+		"img": "/assets/vtuhub.png",
 		"stack": "HTML + TailwindCSS + JavaScript + Django + PayStack",
 		"link": "https://www.vtuhub.online"
 	},
@@ -28,7 +28,7 @@
 		"id": 4,
 		"title": "Winsmart",
 		"description": "Deriv Seminar Registration Platform",
-		"img": "/src/assets/winsmart.png",
+		"img": "/assets/winsmart.png",
 		"stack": "ReactJs + TailwindCSS + Django",
 		"link": "https://winsmart-academy.vercel.app"
 	},
@@ -36,7 +36,7 @@
 		"id": 5,
 		"title": "FoodHub",
 		"description": "Restaurant Page [Test]",
-		"img": "/src/assets/foodhub.png",
+		"img": "/assets/foodhub.png",
 		"stack": "HTML + CSS + JavaScript",
 		"link": "https://rosy-iota.vercel.app"
 	},
@@ -44,7 +44,7 @@
 		"id": 6,
 		"title": "EdAI",
 		"description": "AI-Powered E-Learning Platform [Pending]",
-		"img": "/src/assets/edai.png",
+		"img": "/assets/edai.png",
 		"stack": "HTML + CSS + JavaScript",
 		"link": "https://edai.onrender.com"
 	}
