--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -38,7 +38,7 @@
 		"description": "Restaurant Page [ Test ]",
 		"img": "/assets/foodhub.png",
 		"stack": "HTML + CSS + JavaScript",
-		"link": "https://rosy-iota.vercel.app"
+		"link": "https://restaurant-rosy-iota.vercel.app"
 	},
 	{
 		"id": 6,
