--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -12,7 +12,7 @@
 		"id": 2,
 		"title": "Taskify",
 		"description": "Efficient Task Management App [ In progress ]",
-		"img": "/assets/taskify.png",
+		"img": "/assets/taskify2.png",
 		"stack": "ReactJs + TailwindCSS + Django",
 		"link": "https://taskify-fr.vercel.app"
 	},
