--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -22,7 +22,7 @@
 		"description": "A VTU platform",
 		"img": "/assets/vtuhub.png",
 		"stack": "HTML + TailwindCSS + JavaScript + Django + PayStack",
-		"link": "https://www.vtuhub.online"
+		"link": "https://myvtuhub.com.ng"
 	},
 	{
 		"id": 4,
